Fix homepage text alignment

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -15,6 +15,10 @@ article {
 		}
 	}
 
+	&.api-examples {
+		text-align: left;
+	}
+
 
 	&.home-core {
 		display: grid;
